After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736903 - rtsp: Precedence in expression is not clear
rtsp: Precedence in expression is not clear
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-18 13:28 UTC by Sanjay NM
Modified: 2014-09-23 23:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp: Clarrifying expressions (1.31 KB, patch)
2014-09-18 13:28 UTC, Sanjay NM
committed Details | Review

Description Sanjay NM 2014-09-18 13:28:29 UTC
Created attachment 286496 [details] [review]
rtsp: Clarrifying expressions

Precedence in few expressions is not clear. Made it clear by adding brackets
Comment 1 Tim-Philipp Müller 2014-09-23 23:58:59 UTC
commit f62076e49c2285b1e7fc0ce77b7b749d3d85aae2
Author: Sanjay NM <sanjay.nm@samsung.com>
Date:   Thu Sep 18 17:59:31 2014 +0530

    rtsp: clarify expression so operator precedence is clear
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736903