rtsp: clarify expression so operator precedence is clear

https://bugzilla.gnome.org/show_bug.cgi?id=736903